[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui-theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=5]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.176471, 0.682353, 0.647059, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="BasicButton" type="Button" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 320.0
margin_bottom = 44.0
text = "Basic"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpDownButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 320.0
margin_bottom = 88.0
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
disabled = true
text = "UpDown"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatchButton" type="Button" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 320.0
margin_bottom = 132.0
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
disabled = true
text = "Match 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 136.0
margin_right = 320.0
margin_bottom = 176.0
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/BasicButton" to="." method="_basic_pressed"]
[connection signal="pressed" from="VBoxContainer/UpDownButton" to="." method="_updown_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
